fix(openapi): rename management clusters to registrar clusters & make openapi from Makefile + nix local GOPATH
